<resources>
    <string name="app_name">RingChat</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="remember_pass">Remember password?</string>
    <string name="forget_pass">Forget password</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="reset_pass">Reset password</string>
    <string name="err_emty_pass">Please type password.</string>
    <string name="err_emty_confirm_pass">Please confirm password.</string>
    <string name="err_emty_email">Please type email.</string>
    <string name="err_emty_firstname">Please type firstname.</string>
    <string name="err_emty_lastname">Please type lastname.</string>
    <string name="err_emty_birthday">Please type birthday.</string>
    <string name="err_pass_not_match">Password not match.</string>
    <string name="err_email_invalid">Email address invalid.</string>
    <string name="err_user_exist">This email is registed.</string>
    <string name="err_login">Email or password incorrect.</string>
    <string name="register_success">Register successful.</string>
    <string name="required_login">Please login again.</string>
    <string name="nav_home">Home</string>
    <string name="nav_group">Group</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_account">Account</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="user_not_found">User not found.</string>
    <string name="add_friend_success">Add friend successful.</string>
    <string name="you">You</string>
    <string name="type_name_group">Enter your group name here.</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="group_name">Group name</string>
    <string name="create_new_group">Create new group</string>
    <string name="change_account_info">Change account information</string>
    <string name="change_pass">Change password</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="account_info">Account information</string>
    <string name="confirm_logout">Are you sure to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading. Please wait...</string>
    <string name="please_select_friend">Please select friend.</string>
    <string name="please_type_group_name">Please type group name.</string>
    <string name="created_group">created group</string>
    <string name="and_add">and add</string>
    <string name="into_group">into group.</string>
    <string name="from_group">from group.</string>
    <string name="create_group_success">Create group successful.</string>
    <string name="someone">Someone</string>
    <string name="group_name_too_long">Group name is too long. Please type name again.</string>
    <string name="add_member">Add member</string>
    <string name="remove_member">Remove member</string>
    <string name="remove">Remove</string>
    <string name="removed">removed</string>
    <string name="added">added</string>
    <string name="pass_recent">Recent password</string>
    <string name="pass_new">New password</string>
    <string name="confirm_pass_new">Confirm new password</string>
    <string name="edit_infor_success">Edit account information successful.</string>
    <string name="please_type_recent_pass">Please type recent password.</string>
    <string name="please_type_new_pass">Please type new password.</string>
    <string name="please_type_confirm_new_pass">Please confirm new password.</string>
    <string name="incorrect_recent_pass">You type incorrect recent password. Please type again.</string>
    <string name="new_pass_not_match">New password not match. Please type again.</string>
    <string name="change_pass_success">Change password successful.</string>
    <string name="you_not_in_this_group">You have been removed out of this group.</string>

    <string name="error_unknown">Unknown error</string>
    <string name="error_call_declined">Call declined</string>
    <string name="error_user_busy">User busy</string>
    <string name="error_user_not_found">User not found</string>
    <string name="error_incompatible_media">Incompatible media parameters</string>
    <string name="press_back">Press back again to exit.</string>
    <string name="friend_is_offline">is offline. Can not make call.</string>
    <string name="call_declined">Call declined.</string>
    <string name="miss_call">Missed call.</string>
    <string name="call">Call</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="save">Save</string>
    <string name="alert_select_language">Please select your language.</string>
    <string name="success_language">Change language success.</string>
    <string name="your_lang">This is current language.</string>
    <string name="clear_cache">Clear cache</string>
    <string name="confirm_clear">Are you sure to clear data?</string>
    <string name="confirm_code">Confirm code</string>
    <string name="confirm_code_empty">Confirm code is empty.</string>
    <string name="confirm_code_incorrect">Confirm code incorrect.</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_hint">Type confirm code you have received from email below.</string>
    <string name="remove_friend_success">Remove friend successful.</string>
    <string name="confirm_remove_friend">Are you sure remove this friend?</string>
    <string name="voice_call">Voice call</string>
    <string name="video_call">Voice call</string>
    <string name="permission_denied">Permission denied</string>
    <string name="QR_scan">Scan QR Code</string>
    <string name="sent_a_image">sent a image.</string>
    <string name="set_avatar_success">Set avatar successful.</string>
    <string name="change_avatar">Change avatar</string>
    <string name="network_disconnect">Please connect to internet</string>
</resources>
