<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/colorMain">

        <ImageView
            android:id="@+id/btnBackFromLanguage"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/language" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="8"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center|start"
            android:padding="10dp"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="77dp">

        <RadioButton
            android:id="@+id/rbtnVN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/vietnamese" />

        <RadioButton
            android:id="@+id/rbtnEN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/english" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_login"
            android:textAllCaps="false"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnDialogOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_gradient"
            android:textAllCaps="false"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>