<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroung2"
    tools:context=".LoginActivity">

    <TextView
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_bold"
        android:textSize="30sp"
        android:textColor="@color/colorMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/logo"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/txtErrorLogin"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text=""
        android:textColor="@color/red"  />

    <EditText
        android:id="@+id/txtUsernameLogin"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_login"
        android:drawableLeft="@drawable/ic_account_box_black_24dp"
        android:paddingStart="20sp"
        android:drawablePadding="20dp"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/txtPasswordLogin"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text_login"
        android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
        android:paddingStart="20sp"
        android:drawablePadding="20dp"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:text="@string/remember_pass" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:paddingEnd="10dp"
            android:gravity="right"
            android:text="@string/forget_pass"
            android:textColor="@color/dark_blue"
            android:textSize="20sp" />

        <TextView
            android:layout_width="2dp"
            android:background="@color/white"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/textView2"
            android:gravity="left"
            android:layout_margin="2dp"
            android:paddingStart="10dp"
            android:fontFamily="@font/roboto_regular"
            android:textSize="20sp"
            android:textColor="@color/dark_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:background="@drawable/button_transparent"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/login" />
</LinearLayout>