<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.EditPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:background="@color/colorMain">

                <ImageView
                    android:id="@+id/btnBackToChangePass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_arrow_back_black_24dp"
                    android:contentDescription="@string/search" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:gravity="center|start"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/change_pass"
                    android:textSize="24sp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_marginTop="5dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                app:cardCornerRadius="60dp">

                <ImageView
                    android:id="@+id/imageAvatarChangePass"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/logo" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtNameChangePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/dark_blue"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtErrorChangePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:textSize="20sp"
                android:text=""
                android:textColor="@color/red" />

            <EditText
                android:id="@+id/txtPasswordRecentEditPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_register"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/pass_recent"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPasswordNewEditPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_register"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/pass_new"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtConfirmPasswordNewEditPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_register"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/confirm_pass_new"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnEditPass"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:background="@drawable/button_gradient"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_pass" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>