<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroung2"
    tools:context=".activity.RegisterActivity">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnBackToLogin2"
                    android:layout_marginStart="5dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/abc_vector_test" />

                <TextView
                    android:gravity="left"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_pass" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_marginTop="20dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                app:cardCornerRadius="30dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/logo" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtErrorRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text=""
                android:textColor="@color/red" />

            <EditText
                android:id="@+id/txtUsernameForgetPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_register"
                android:drawableLeft="@drawable/ic_account_box_black_24dp"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:paddingStart="20sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnForgetPass"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:background="@drawable/button_gradient"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_pass" />

</LinearLayout>