<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/loadingContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/header_contact"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/colorMain">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/nav_contact" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:ems="10"
            android:textColor="@color/dark_blue"
            android:layout_marginVertical="8dp"
            android:layout_weight="9"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:hint="@string/search"
            android:inputType="textPersonName"
            android:background="@drawable/edit_text_search"
            android:drawableEnd="@drawable/search"
            android:layout_marginEnd="20dp"
            android:autofillHints="" />

<!--        <ImageButton-->
<!--            android:id="@+id/img_search"-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="43dp"-->
<!--            android:background="#fff"-->
<!--            android:layout_weight="0.3"-->
<!--            android:layout_marginVertical="8dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            app:srcCompat="@drawable/search"-->
<!--            android:contentDescription="@string/search" />-->
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/img_but_add_user"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/add"
        android:contentDescription="@string/add" />
</RelativeLayout>